--- a/index.html
+++ b/index.html
@@ -854,13 +854,22 @@ I firmly believe that our commitment to quality, cost-effectiveness, exceptional
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
+              <img src="assets/img/portfolio/uppprog.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Upprog</h4>
+                <a href="assets/img/portfolio/uppprog.jpg" title="Upprog" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://play.google.com/store/apps/details?id=com.wamdah.snooperjasoss&hl=en_US" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://www.youtube.com/watch?v=bvMW4244ItI" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+              </div>
+            </div>
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
               <img src="assets/img/portfolio/02.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Snoper</h4>
                 <a href="assets/img/portfolio/02.png" title="Snoper" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://play.google.com/store/apps/details?id=com.wamdah.snooperjasoss&hl=en_US" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://github.com/houssamaziez/UpProg" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
 
@@ -890,7 +899,7 @@ I firmly believe that our commitment to quality, cost-effectiveness, exceptional
               <div class="portfolio-info">
                 <h4>El gani</h4>
                 <a href="assets/img/portfolio/1.png" title="Branding 1" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://github.com/houssamaziez/alganiPf" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 <a href="https://www.youtube.com/watch?v=bU1gAfa8GVY" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
               </div>
             </div><!-- End Portfolio Item -->
