--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="index.html#team">Team</a></li>
+          <!-- <li><a class="nav-link scrollto" href="index.html#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li>                   -->
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
