modified:   index.html

--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 
         <div class="row g-0">
           <div class="col-lg-6 video-play position-relative">
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+            <a href="https://www.youtube.com/watch?v=hRTrcKnfvVc" class="glightbox play-btn"></a>
           </div>
           <div class="col-lg-6">
             <div class="content d-flex flex-column justify-content-center h-100">
-              <h3>Grow Your Business Now!</h3>
+              <h3>My Professional Team Up Prog</h3>
               <p class="fst-italic">
                 I introduce fresh value to your business. My dedication lies in delivering an exceptional digital product that perfectly aligns with your needs.
               </p>
@@ -310,7 +310,7 @@
                 <li><i class="bi bi-tools"></i> After-sales service maintenance.</li>
                 <li><i class="bi bi-emoji-smile"></i> Service guarantee for one year.                </li>
               </ul>
-              <a href="#" class="read-more align-self-start"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="https://web.facebook.com/upProgdz" class="read-more align-self-start"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
         </div>
